<resources>
    <string name="app_name">Quick Notes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_Note_successful">Note deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_Note_failed">Error with deleting Note</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this Note?</string>
    <string name="deleteAll_dialog_msg">Delete All the Notes you created so far?</string>

    <string name="unsaved_changes">Changes you made have not been saved. Do you want to save Changes?</string>

    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="no_reminders">Click on the plus button below to begin creating your reminders!</string>


    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <string name="save_changes">Save Changes</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="Task_completed">Mark the Task as Completed?</string>
    <string name="Task_Uncompleted">Mark the Task as Uncompleted?</string>

    <string name="title_activity_todo">TodoActivity</string>
</resources>
