<!--
  Copyright 2015 Blanyal D'Souza.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mdtp_white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="16dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorPrimary"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/add_reminder_layout_top"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:layout_height="148dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/reminder_title"
            android:layout_marginLeft="72dp"
            android:hint="@string/add_reminder"
            android:textSize="25dp"
            android:lines="4"
            android:minLines="4"
            android:gravity="left|center"
            android:textColor="@android:color/white"
            android:scrollHorizontally="false"
            android:textColorHint="@color/primary_text_disabled_material_dark"
            android:inputType="textCapWords|textMultiLine"
            android:layout_marginRight="16dp"
            android:layout_height="140dp"
            />

    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_below="@id/add_reminder_layout_top"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/details"
                android:textColor="@color/control_normal"
                android:textSize="15dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="setDate"
                android:id="@+id/date"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_view_day_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/date_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/control_normal"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/set_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/control_normal"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="setTime"
                android:id="@+id/time"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_access_time_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/time_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/control_normal"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/set_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/control_normal"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/repeat"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_sync_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/repeat_ll"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat"
                        android:textColor="@color/control_normal"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/set_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/control_normal"
                        android:textSize="15dp" />

                </LinearLayout>

                <Switch
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:checked="true"
                    android:onClick="onSwitchRepeat"
                    android:switchTextAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/colorAccent"
                    android:textOff="Off"
                    android:textOn="On" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/RepeatNo"
                android:clickable="true"
                android:onClick="setRepeatNo"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_no_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_unfold_more_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_no_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_no_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_no"
                        android:textColor="@color/control_normal"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/set_repeat_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/control_normal"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/RepeatType"
                android:clickable="true"
                android:onClick="selectRepeatType"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_subject_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_type_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_type_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_type"
                        android:textColor="@color/control_normal"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/set_repeat_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/control_normal"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/add_reminder_layout_top"
        android:background="@drawable/toolbar_dropshadow" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="selectFab1"
        fab:fab_icon="@drawable/ic_notifications_off_grey600_24dp"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_colorPressed="@color/fab_pressed"
        app:fab_size="normal"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="168dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"/>

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="selectFab2"
        fab:fab_icon="@drawable/ic_notifications_on_white_24dp"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_colorPressed="@color/fab_pressed"
        app:fab_size="normal"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="168dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"/>

</RelativeLayout>
